fix menu(align-item:center;)

--- a/css/main.css
+++ b/css/main.css
@@ -26,11 +26,6 @@ nav.container {
     padding: 0 20px;
 }
 
-nav.menu_container {
-    flex-direction: column;
-    align-items: center;
-}
-
 #header_menu {
     font-size: 15px;
     cursor: pointer;
@@ -44,17 +39,18 @@ nav.menu_container {
 .menu_container {
     display: flex;
     flex-flow: column nowrap;
+    justify-content: center;
     align-items: center;
-    width: 30%;
-    margin: auto auto;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
 }
 
 #menu {
-    justify-content: center;
+    align-items: center;
     position: fixed;
     background-color: rgba(59, 67, 76, 0.95);
     width: 100%;
-    min-width: 360px;
     height: 100%;
     z-index: 3;
     text-align: center;
@@ -355,6 +351,7 @@ section#services {
     padding: 0px;
     border-radius: 10px;
     position: relative;
+    align-self: center;
 }
 
 .orange {
@@ -376,7 +373,7 @@ section#services {
     margin: 0px auto 90px auto;
     width: auto;
     flex-basis: 100%;
-    height: auto;
+    height: 100%;
 }
 
 .fl1 h4 {
